fix header overflow

--- a/app/assets/stylesheets/editor-3/header.css.scss
+++ b/app/assets/stylesheets/editor-3/header.css.scss
@@ -41,6 +41,9 @@
   padding-right: 16px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 .Editor-HeaderInfo-actions {
   @include display-flex();
